--- a/udemy_css/animations-1-applying-transitions/shared.css
+++ b/udemy_css/animations-1-applying-transitions/shared.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css?family=Anton');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
+:root{
+  --dark-green: #0e4f1f;
+  --highlight-color:#ff1b68;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -9,17 +14,22 @@
 html {
   height: 100%;
 }
-
-body {
+body{
   font-family: "Montserrat", sans-serif;
   margin: 0;
+  padding-top: 3.5rem;
+}
+
+@supports(display:grid){
+body {
   display: grid;
   grid-template-rows: 3.5rem auto fit-content(8rem);
   grid-template-areas: "header"
                        "main"
                        "footer";
-  /* padding-top: 3.5rem; */
+  padding-top:0;
   height: 100%;
+}
 }
 
 main {
@@ -48,6 +58,9 @@ main {
   background: #2ddf5c;
   padding: 0.5rem 1rem;
   z-index: 60;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -76,7 +89,7 @@ main {
 }
 
 .main-header__brand {
-  color: #0e4f1f;
+  color: var(--dark-green);
   text-decoration: none;
   font-weight: bold;
   /* width: 20px; */
@@ -106,7 +119,7 @@ main {
 .main-nav__item a,
 .mobile-nav__item a {
   text-decoration: none;
-  color: #0e4f1f;
+  color:var(--dark-green);
   font-weight: bold;
   padding: 0.2rem 0;
 }
@@ -133,7 +146,7 @@ main {
 .main-nav__item--cta a:active,
 .mobile-nav__item--cta a:hover,
 .mobile-nav__item--cta a:active {
-  color: #ff1b68;
+  color: var(--highlight-color);
   background: white;
   border: none;
 }
@@ -214,7 +227,7 @@ main {
 }
 
 .button {
-  background: #0e4f1f;
+  background: var(--dark-green);
   color: white;
   font: inherit;
   border: 1.5px solid #0e4f1f;
